fixed alignment

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -11,9 +11,7 @@
 	display: block;
 	text-align: left;
 }
-.container{
-  margin-top:60px;
-}
+
 .container.forsale {
 	margin-top: 0px;
 	margin-bottom: 90px;
@@ -24,7 +22,7 @@
 }
 
 .container.service {
-	margin: 0px 135px;
+	margin: 0px auto;
 }
 
 .page-scroll.btn.btn-default.btn-xl.sr-button {
